--- a/popup.html
+++ b/popup.html
@@ -1,34 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <style>
-      body { margin: 12px; font: 13px Arial, sans-serif; width: 220px; }
-      .row { display: flex; align-items: center; justify-content: space-between; gap: 10px; }
-      .title { font-weight: 600; }
-      .hint { color: #666; font-size: 12px; margin-top: 6px; line-height: 1.35; }
-      input[type="checkbox"] { transform: scale(1.1); }
-      .state { font-size: 12px; color: #444; margin-top: 10px; }
-      button { margin-top: 10px; width: 100%; padding: 8px; cursor: pointer; }
-    </style>
-  </head>
-  <body>
-    <div class="row">
-      <div class="title">NetBar</div>
-      <label>
-        <input id="toggle" type="checkbox" />
-        <span>Aktif</span>
-      </label>
+<head>
+  <meta charset="utf-8">
+  <style>
+    body { width: 240px; font-family: sans-serif; padding: 10px; background: #1f2937; color: #f3f4f6; }
+    h3 { margin: 0 0 10px; font-size: 16px; border-bottom: 1px solid #374151; padding-bottom: 5px; }
+    .row { display: flex; align-items: center; justify-content: space-between; margin-bottom: 10px; }
+    label { font-size: 13px; cursor: pointer; }
+    button { width: 100%; padding: 6px; cursor: pointer; background: #3b82f6; border: none; color: white; border-radius: 4px; }
+    button:hover { background: #2563eb; }
+    input[type="range"] { width: 100%; margin: 5px 0; }
+    .sub-label { font-size: 11px; color: #9ca3af; display: block; margin-bottom: 2px; }
+  </style>
+</head>
+<body>
+  <h3>NetBar Settings</h3>
+  
+  <div class="row">
+    <label for="toggle">Global Enable</label>
+    <input type="checkbox" id="toggle">
+  </div>
+
+  <div style="margin-bottom: 12px;">
+    <label for="siteToggle">Enable on this site</label>
+    <div style="display: flex; align-items: center; gap: 8px;">
+      <input type="checkbox" id="siteToggle">
+      <span id="currentDomain" style="font-size: 11px; color: #9ca3af; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; max-width: 120px;"></span>
     </div>
+  </div>
 
-    <div class="hint">
-      Açıkken sayfanın üstüne bilgi barı ekler. Kapalıyken hiçbir şey enjekte etmez.
-    </div>
+  <div style="margin-bottom: 12px;">
+    <span class="sub-label">Opacity: <span id="opacityVal">100%</span></span>
+    <input type="range" id="opacity" min="10" max="100" value="100">
+  </div>
 
-    <div class="state" id="state">Durum: -</div>
-
-    <button id="refresh">Bu sekmede uygula</button>
-
-    <script src="popup.js"></script>
-  </body>
+  <button id="refresh">Refresh Data</button>
+  
+  <script src="popup.js"></script>
+</body>
 </html>
