--- a/popup.html
+++ b/popup.html
@@ -1,21 +1,67 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <style>
-    body { width: 240px; font-family: sans-serif; padding: 10px; background: #1f2937; color: #f3f4f6; }
-    h3 { margin: 0 0 10px; font-size: 16px; border-bottom: 1px solid #374151; padding-bottom: 5px; }
-    .row { display: flex; align-items: center; justify-content: space-between; margin-bottom: 10px; }
-    label { font-size: 13px; cursor: pointer; }
-    button { width: 100%; padding: 6px; cursor: pointer; background: #3b82f6; border: none; color: white; border-radius: 4px; }
-    button:hover { background: #2563eb; }
-    input[type="range"] { width: 100%; margin: 5px 0; }
-    .sub-label { font-size: 11px; color: #9ca3af; display: block; margin-bottom: 2px; }
+    body {
+      width: 240px;
+      font-family: sans-serif;
+      padding: 10px;
+      background: #1f2937;
+      color: #f3f4f6;
+    }
+
+    h3 {
+      margin: 0 0 10px;
+      font-size: 16px;
+      border-bottom: 1px solid #374151;
+      padding-bottom: 5px;
+    }
+
+    .row {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 10px;
+    }
+
+    label {
+      font-size: 13px;
+      cursor: pointer;
+    }
+
+    button {
+      width: 100%;
+      padding: 6px;
+      cursor: pointer;
+      background: #3b82f6;
+      border: none;
+      color: white;
+      border-radius: 4px;
+    }
+
+    button:hover {
+      background: #2563eb;
+    }
+
+    input[type="range"] {
+      width: 100%;
+      margin: 5px 0;
+    }
+
+    .sub-label {
+      font-size: 11px;
+      color: #9ca3af;
+      display: block;
+      margin-bottom: 2px;
+    }
   </style>
 </head>
+
 <body>
   <h3>NetBar Settings</h3>
-  
+
   <div class="row">
     <label for="toggle">Global Enable</label>
     <input type="checkbox" id="toggle">
@@ -25,8 +71,14 @@
     <label for="siteToggle">Enable on this site</label>
     <div style="display: flex; align-items: center; gap: 8px;">
       <input type="checkbox" id="siteToggle">
-      <span id="currentDomain" style="font-size: 11px; color: #9ca3af; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; max-width: 120px;"></span>
+      <span id="currentDomain"
+        style="font-size: 11px; color: #9ca3af; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; max-width: 120px;"></span>
     </div>
+  </div>
+
+  <div class="row">
+    <label for="ghostToggle">Ghost Mode (Click-through)</label>
+    <input type="checkbox" id="ghostToggle">
   </div>
 
   <div style="margin-bottom: 12px;">
@@ -35,7 +87,8 @@
   </div>
 
   <button id="refresh">Refresh Data</button>
-  
+
   <script src="popup.js"></script>
 </body>
+
 </html>
